--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+- *.meta
+
 # User-specific files
 *.rsuser
 *.suo
@@ -62,7 +64,7 @@ StyleCopReport.xml
 *_p.c
 *_h.h
 *.ilk
-*.meta
+- *.meta
 *.obj
 *.iobj
 *.pch
