--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "displayName": "ECP Core",
   "description": "ECP is a fork of LeoECS with adding pipeline pattern and entity type based filtering",
   "unity": "2018.3",
-  "version": "2019.3.20",
+  "version": "1.0.3",
   "keywords": [
     "ecp",
     "pipeline"
   ],
   "dependencies": {},
+  "files": [
+    "/src",
+    "*.asmdef",
+    "*.meta"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/jtferson/Jtfer.Ecp"
